# stix2nx

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: visualize_attack.py
src/stix2nx/: __init__.py  converter.py  parsers.py  utils.py
tests/: conftest.py  test_attack.py  test_basic.py  test_digraph.py  test_merge.py  test_sco.py  test_sightings.py  test_stix20.py  test_stix21.py
tests/data/: attack-subset.json  build_subset.py
